--- a/web_work/idol.html
+++ b/web_work/idol.html
@@ -31,7 +31,7 @@
       <img src="images/idol_2.jpg" width="300" />
       <span>
         <h3>张翰</h3>
-        <p>在当下所有人都在追求高质量高效率高素质的“浮华”面具来彰显人类的虚伪和被周围环境压迫得不能自已时，他，张翰，突出重围，为内娱文娱找到了一片新鲜的土壤！他没有任何掩饰地将自己剖开来，奉献给大家，剖开来自己的思想，也剖开来自己真实的生活。他通过影视的方式为大家揭露了一种从未被人述说过的内娱人的真实生活，掀开了经过无数广告公司装饰的“高贵不露低俗”的娱乐圈文化。把人性的丑恶用一种诙谐且自然的镜头语言，揭露！让白炽灯下无数身着华丽服饰，身姿挺拔的艺人被卸下了底妆，看到了腐朽的内底和塞满垃圾的腔内。</p>
+        <p>他，张翰，为内娱文娱找到了一片新鲜的土壤！他没有任何掩饰地将自己剖开来，奉献给大家，剖开来自己的思想，也剖开来自己真实的生活。他通过影视的方式为大家揭露了一种从未被人述说过的内娱人的真实生活，掀开了经过无数广告公司装饰的“高贵不露低俗”的娱乐圈文化。把人性的丑恶用一种诙谐且自然的镜头语言，揭露！让白炽灯下无数身着华丽服饰，身姿挺拔的艺人被卸下了底妆，看到了腐朽的内底和塞满垃圾的腔内。</p>
       </span>
       <div class="clear"></div>
     </div>
